added vimwiki, FuzzyFinder, Tagbar

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,15 @@
 [submodule ".vim/bundle/Lucius"]
 	path = .vim/bundle/Lucius
 	url = git@github.com:zefei/Lucius.git
+[submodule ".vim/bundle/vimwiki"]
+	path = .vim/bundle/vimwiki
+	url = https://github.com/vim-scripts/vimwiki.git
+[submodule ".vim/bundle/L9"]
+	path = .vim/bundle/L9
+	url = https://github.com/vim-scripts/L9.git
+[submodule ".vim/bundle/FuzzyFinder"]
+	path = .vim/bundle/FuzzyFinder
+	url = https://github.com/vim-scripts/FuzzyFinder.git
+[submodule ".vim/bundle/tagbar"]
+	path = .vim/bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
